@@ -1,3 +1,4 @@
+Fraction Builder: Added levels 1-2
 Fraction Builder: Added a "Resample" button for debugging, only enabled when running in dev mode
 Fraction Builder: Randomize levels after "reset all" pressed
 Fraction Builder: Removed "My Fractions" text
